--- a/public/styles/thirai.css
+++ b/public/styles/thirai.css
@@ -131,6 +131,7 @@ html {
   .movie-details .detail {
     margin-left: 0;
     width: 65%;
+    color: #fff;
   }
   
   .movie-details .label {
@@ -154,3 +155,95 @@ html {
     opacity: 1;
     height: auto;
   }
+
+/* pages */
+
+.screen,
+.top-bar{
+  width: 320px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.top-bar {
+  background: linear-gradient(180deg, rgba(72,123,246,0.888), rgba(0,147,203,0.888));
+  padding: 0.25em;
+  position: fixed;
+  z-index: 1;
+}
+
+h1, h2 {
+  margin: 0;
+  text-align: center;
+  font-weight: 300;
+  color: #fff;
+}
+
+.movies {
+  height: 95vh;
+  transform-style: preserve-3d;
+  padding-top: 2.9em;
+}
+
+.button-back {}
+.button-filters {}
+
+
+/*asdasdsadsadasda*/
+
+      .movies {
+/*        position: relative;*/
+/*        width: 100%;*/
+/*        height: 100%;*/
+/*        perspective: 1200px;*/
+/*        transform-style: preserve-3d;*/
+      }
+      .details-list {
+  margin-top: 2.9em;
+        background: rgba(0, 0, 0, 0.95);
+/*        width: 100%;*/
+/*        height: 100%;*/
+        position: absolute;
+        top: 0;
+        left: 0;
+        visibility: hidden;
+        overflow: hidden;
+        backface-visibility: hidden;
+        transform: translate3d(0, 0, 0);
+        padding: 1em;
+        height: 100%;
+      }
+      
+      .details-list.is-visible {
+        visibility: visible;
+      }
+
+      .movies-list,
+      .details-list {
+        width: 320px;
+/*        height: 100vh;*/
+        float: left;
+      }
+      
+      .movies-list img {
+/*        background: red;
+        */
+        max-width: 100%;
+      }
+
+.top-bar-left,
+.top-bar-right {
+  width: 20%;
+}
+
+.top-bar-center {
+  width: 60%;
+}
+
+.top-bar-left,
+.top-bar-right,
+.top-bar-center {
+  float: left;
+  display: block;
+  height: 2.5em;
+}
